# gpicview

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  autogen.sh  configure.ac  inhulview.desktop.in
data/: Makefile.am
debian/: control  inhulview.1  manpages
po/: Makevars  POTFILES.in  af.po  ar.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  inhulview.pot  is.po  it.po  ja.po  kk.po  kn.po  ko.po  lg.po  lt.po  ml.po  ms.po  (+26 more)
src/: Makefile.am  image-list.c  image-view.c  image-view.h  inhulview.c  main-win.c  pref.c
