PIXMAPS_FILES = \
	pixmaps/object-rotate-right.png \
	pixmaps/object-rotate-left.png \
	pixmaps/object-flip-horizontal.png \
	pixmaps/object-flip-vertical.png

inhulview_DATA = 
inhulviewdir = $(datadir)/inhulview

pixmaps_DATA = $(PIXMAPS_FILES)
pixmapsdir = $(inhulviewdir)/pixmaps

ui_in_files = \
	pref-dlg.ui
ui_DATA = $(ui_in_files)
uidir=$(datadir)/inhulview/ui

EXTRA_DIST = \
	$(inhulview_DATA) \
	$(pixmaps_DATA) \
	$(ui_DATA)

